--- a/tests/tutorial_package.ipynb
+++ b/tests/tutorial_package.ipynb
@@ -282,6 +282,251 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im = io.imread(\"../sample_newMachine/test_cases/AG00IHWX_000000.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = rh.extract_rh_props(im, clf = clf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_file_list = utils.listdir_with_path('../sample_newMachine/test_cases/', suffix = \".jpg\")\n",
+    "features_file_list = utils.listdir_with_path('../sample_newMachine/small/', suffix = \".jpg\")\n",
+    "save_dir = \"../sample_newMachine/out/\"\n",
+    "res = rh.batch_extract_rh_props(file_list=features_file_list, clf = clf, save_dir=save_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>orientation</th>\n",
+       "      <th>length</th>\n",
+       "      <th>approx_check</th>\n",
+       "      <th>adjusted_length</th>\n",
+       "      <th>adjusted_length_with_sqrt2</th>\n",
+       "      <th>fname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1477.160000</td>\n",
+       "      <td>183.842921</td>\n",
+       "      <td>0.055571</td>\n",
+       "      <td>252.539235</td>\n",
+       "      <td>Bad approx</td>\n",
+       "      <td>561.000000</td>\n",
+       "      <td>594.379726</td>\n",
+       "      <td>../sample_newMachine/small/AG003B8X000001.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1046.026606</td>\n",
+       "      <td>474.975057</td>\n",
+       "      <td>-0.352643</td>\n",
+       "      <td>124.017761</td>\n",
+       "      <td>Bad approx</td>\n",
+       "      <td>312.000000</td>\n",
+       "      <td>364.190909</td>\n",
+       "      <td>../sample_newMachine/small/AG003B8X000001.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1299.638649</td>\n",
+       "      <td>730.645115</td>\n",
+       "      <td>0.023735</td>\n",
+       "      <td>106.438163</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>106.438163</td>\n",
+       "      <td>106.438163</td>\n",
+       "      <td>../sample_newMachine/small/AG003B8X000001.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1461.243243</td>\n",
+       "      <td>763.148148</td>\n",
+       "      <td>-0.244384</td>\n",
+       "      <td>84.571346</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>84.571346</td>\n",
+       "      <td>84.571346</td>\n",
+       "      <td>../sample_newMachine/small/AG003B8X000001.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1317.775348</td>\n",
+       "      <td>802.182903</td>\n",
+       "      <td>-0.537929</td>\n",
+       "      <td>54.820845</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>54.820845</td>\n",
+       "      <td>54.820845</td>\n",
+       "      <td>../sample_newMachine/small/AG003B8X000001.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>317.220837</td>\n",
+       "      <td>1509.621590</td>\n",
+       "      <td>0.149442</td>\n",
+       "      <td>353.749693</td>\n",
+       "      <td>Bad approx</td>\n",
+       "      <td>442.000000</td>\n",
+       "      <td>493.948268</td>\n",
+       "      <td>../sample_newMachine/small/AG00IHWX_000007.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>191.334179</td>\n",
+       "      <td>1486.811337</td>\n",
+       "      <td>0.395039</td>\n",
+       "      <td>224.284518</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>224.284518</td>\n",
+       "      <td>224.284518</td>\n",
+       "      <td>../sample_newMachine/small/AG00IHWX_000007.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>100.286811</td>\n",
+       "      <td>1514.358175</td>\n",
+       "      <td>0.423810</td>\n",
+       "      <td>227.724730</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>227.724730</td>\n",
+       "      <td>227.724730</td>\n",
+       "      <td>../sample_newMachine/small/AG00IHWX_000007.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>324.590164</td>\n",
+       "      <td>1467.551913</td>\n",
+       "      <td>0.313729</td>\n",
+       "      <td>64.045784</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>64.045784</td>\n",
+       "      <td>64.045784</td>\n",
+       "      <td>../sample_newMachine/small/AG00IHWX_000007.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>1481.204560</td>\n",
+       "      <td>1922.826710</td>\n",
+       "      <td>0.211548</td>\n",
+       "      <td>130.731184</td>\n",
+       "      <td>Bad approx</td>\n",
+       "      <td>225.000000</td>\n",
+       "      <td>249.267027</td>\n",
+       "      <td>../sample_newMachine/small/AG00IHWX_000007.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>97 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              X            Y  orientation      length approx_check  \\\n",
+       "0   1477.160000   183.842921     0.055571  252.539235   Bad approx   \n",
+       "1   1046.026606   474.975057    -0.352643  124.017761   Bad approx   \n",
+       "2   1299.638649   730.645115     0.023735  106.438163           OK   \n",
+       "3   1461.243243   763.148148    -0.244384   84.571346           OK   \n",
+       "4   1317.775348   802.182903    -0.537929   54.820845           OK   \n",
+       "..          ...          ...          ...         ...          ...   \n",
+       "42   317.220837  1509.621590     0.149442  353.749693   Bad approx   \n",
+       "43   191.334179  1486.811337     0.395039  224.284518           OK   \n",
+       "44   100.286811  1514.358175     0.423810  227.724730           OK   \n",
+       "45   324.590164  1467.551913     0.313729   64.045784           OK   \n",
+       "46  1481.204560  1922.826710     0.211548  130.731184   Bad approx   \n",
+       "\n",
+       "    adjusted_length  adjusted_length_with_sqrt2  \\\n",
+       "0        561.000000                  594.379726   \n",
+       "1        312.000000                  364.190909   \n",
+       "2        106.438163                  106.438163   \n",
+       "3         84.571346                   84.571346   \n",
+       "4         54.820845                   54.820845   \n",
+       "..              ...                         ...   \n",
+       "42       442.000000                  493.948268   \n",
+       "43       224.284518                  224.284518   \n",
+       "44       227.724730                  227.724730   \n",
+       "45        64.045784                   64.045784   \n",
+       "46       225.000000                  249.267027   \n",
+       "\n",
+       "                                             fname  \n",
+       "0    ../sample_newMachine/small/AG003B8X000001.jpg  \n",
+       "1    ../sample_newMachine/small/AG003B8X000001.jpg  \n",
+       "2    ../sample_newMachine/small/AG003B8X000001.jpg  \n",
+       "3    ../sample_newMachine/small/AG003B8X000001.jpg  \n",
+       "4    ../sample_newMachine/small/AG003B8X000001.jpg  \n",
+       "..                                             ...  \n",
+       "42  ../sample_newMachine/small/AG00IHWX_000007.jpg  \n",
+       "43  ../sample_newMachine/small/AG00IHWX_000007.jpg  \n",
+       "44  ../sample_newMachine/small/AG00IHWX_000007.jpg  \n",
+       "45  ../sample_newMachine/small/AG00IHWX_000007.jpg  \n",
+       "46  ../sample_newMachine/small/AG00IHWX_000007.jpg  \n",
+       "\n",
+       "[97 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
