--- a/README.ipynb
+++ b/README.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial notebook of rhsegmentor\n",
+    "# rhsegmentor: root hair segmentation\n",
+    "\n",
+    "**rhsegmentor** is a Python package simplifies the bulk segmentation and analysis of root hair images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tutorial\n",
     "\n",
     "This tutorial guides you throuhg the main use cases of the `rhsegmentor` package."
    ]
